[gd_scene load_steps=13 format=3 uid="uid://dyacpk5ql2oiw"]

[ext_resource type="Script" path="res://menus/title_screen.gd" id="1_tnvwo"]
[ext_resource type="PackedScene" uid="uid://c7xkwietyob3k" path="res://objects/ground_tile_map.tscn" id="2_1si5c"]
[ext_resource type="FontFile" uid="uid://cmy6ljy2cgrs2" path="res://assets/Grip-p7WZv.otf" id="3_xyj0s"]
[ext_resource type="FontFile" uid="uid://crv1fe8qwi4jv" path="res://assets/BRLNSR.TTF" id="4_l6lja"]
[ext_resource type="Texture2D" uid="uid://brkepc3gmb6xf" path="res://assets/Spike.png" id="5_f3ve2"]
[ext_resource type="Texture2D" uid="uid://6nvfhp5m0kfh" path="res://assets/Player.png" id="6_76h86"]

[sub_resource type="LabelSettings" id="LabelSettings_fe4p5"]
font = ExtResource("3_xyj0s")
font_size = 48
font_color = Color(0, 0, 0, 1)

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_t1m47"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_yqdlw"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_c0x2h"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_1erl6"]

[sub_resource type="LabelSettings" id="LabelSettings_bsiki"]
font = ExtResource("3_xyj0s")
font_size = 64
font_color = Color(0, 0, 0, 1)

[node name="TitleScreen" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_tnvwo")

[node name="GroundTileMap" parent="." instance=ExtResource("2_1si5c")]
layer_0/tile_data = PackedInt32Array(0, 0, 0, 65536, 0, 0, 131072, 0, 0, 196608, 0, 0, 262144, 0, 0, 327680, 0, 0, 393216, 0, 0, 458752, 0, 0, 524288, 0, 0, 589824, 0, 0, 655360, 0, 0, 720896, 0, 0, 1, 0, 0, 65537, 0, 0, 131073, 0, 0, 196609, 0, 0, 262145, 0, 0, 327681, 0, 0, 393217, 0, 0, 458753, 0, 0, 524289, 0, 0, 589825, 0, 0, 655361, 0, 0, 720897, 0, 0, 2, 0, 0, 65538, 0, 0, 131074, 0, 0, 196610, 0, 0, 262146, 0, 0, 327682, 0, 0, 393218, 0, 0, 458754, 0, 0, 524290, 0, 0, 589826, 0, 0, 655362, 0, 0, 720898, 0, 0, 3, 0, 0, 65539, 0, 0, 131075, 0, 0, 196611, 0, 0, 262147, 0, 0, 327683, 0, 0, 393219, 0, 0, 458755, 0, 0, 524291, 0, 0, 589827, 0, 0, 655363, 0, 0, 720899, 0, 0, 4, 0, 0, 65540, 0, 0, 131076, 0, 0, 196612, 0, 0, 262148, 0, 0, 327684, 0, 0, 393220, 0, 0, 458756, 0, 0, 524292, 0, 0, 589828, 0, 0, 655364, 0, 0, 720900, 0, 0, 5, 0, 0, 65541, 0, 0, 131077, 0, 0, 196613, 0, 0, 262149, 0, 0, 327685, 0, 0, 393221, 0, 0, 458757, 0, 0, 524293, 0, 0, 589829, 0, 0, 655365, 0, 0, 720901, 0, 0, 6, 0, 0, 65542, 0, 0, 131078, 0, 0, 196614, 0, 0, 262150, 0, 0, 327686, 0, 0, 393222, 0, 0, 458758, 0, 0, 524294, 0, 0, 589830, 0, 0, 655366, 0, 0, 720902, 0, 0, 7, 0, 0, 65543, 0, 0, 131079, 0, 0, 196615, 0, 0, 262151, 0, 0, 327687, 0, 0, 393223, 0, 0, 458759, 0, 0, 524295, 0, 0, 589831, 0, 0, 655367, 0, 0, 720903, 0, 0, 8, 0, 0, 65544, 0, 0, 131080, 0, 0, 196616, 0, 0, 262152, 0, 0, 327688, 0, 0, 393224, 0, 0, 458760, 0, 0, 524296, 0, 0, 589832, 0, 0, 655368, 0, 0, 720904, 0, 0, 9, 0, 0, 65545, 0, 0, 131081, 0, 0, 196617, 0, 0, 262153, 0, 0, 327689, 0, 0, 393225, 0, 0, 458761, 0, 0, 524297, 0, 0, 589833, 0, 0, 655369, 0, 0, 720905, 0, 0, 10, 0, 0, 65546, 0, 0, 131082, 0, 0, 196618, 0, 0, 262154, 0, 0, 327690, 0, 0, 393226, 0, 0, 458762, 0, 0, 524298, 0, 0, 589834, 0, 0, 655370, 0, 0, 720906, 0, 0, 11, 0, 0, 65547, 0, 0, 131083, 0, 0, 196619, 0, 0, 262155, 0, 0, 327691, 0, 0, 393227, 0, 0, 458763, 0, 0, 524299, 0, 0, 589835, 0, 0, 655371, 0, 0, 720907, 0, 0, 12, 0, 0, 65548, 0, 0, 131084, 0, 0, 196620, 0, 0, 262156, 0, 0, 327692, 0, 0, 393228, 0, 0, 458764, 0, 0, 524300, 0, 0, 589836, 0, 0, 655372, 0, 0, 720908, 0, 0, 13, 0, 0, 65549, 0, 0, 131085, 0, 0, 196621, 0, 0, 262157, 0, 0, 327693, 0, 0, 393229, 0, 0, 458765, 0, 0, 524301, 0, 0, 589837, 0, 0, 655373, 0, 0, 720909, 0, 0, 14, 0, 0, 65550, 0, 0, 131086, 0, 0, 196622, 0, 0, 262158, 0, 0, 327694, 0, 0, 393230, 0, 0, 458766, 0, 0, 524302, 0, 0, 589838, 0, 0, 655374, 0, 0, 720910, 0, 0, 15, 0, 0, 65551, 0, 0, 131087, 0, 0, 196623, 0, 0, 262159, 0, 0, 327695, 0, 0, 393231, 0, 0, 458767, 0, 0, 524303, 0, 0, 589839, 0, 0, 655375, 0, 0, 720911, 0, 0)

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 2
offset_left = 144.0
offset_top = 176.0
offset_right = 880.0
offset_bottom = 272.0

[node name="RaisweptLabel" type="Label" parent="HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "Rainswept Studio"
label_settings = SubResource("LabelSettings_fe4p5")

[node name="CopyrightLabel" type="Label" parent="HBoxContainer"]
layout_mode = 2
text = "Copyright 2024"
label_settings = SubResource("LabelSettings_fe4p5")
horizontal_alignment = 2

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = -1
offset_left = 360.0
offset_top = 464.0
offset_right = 656.0
offset_bottom = 744.0

[node name="StartButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
focus_neighbor_top = NodePath("../CreditsButton")
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_color = Color(0.658824, 0.894118, 0.988235, 1)
theme_override_colors/font_focus_color = Color(0.411765, 0.411765, 0.411765, 1)
theme_override_fonts/font = ExtResource("4_l6lja")
theme_override_font_sizes/font_size = 60
theme_override_styles/normal = SubResource("StyleBoxEmpty_t1m47")
text = "Start"

[node name="LevelSelectButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_color = Color(0.658824, 0.894118, 0.988235, 1)
theme_override_colors/font_focus_color = Color(0.411765, 0.411765, 0.411765, 1)
theme_override_fonts/font = ExtResource("4_l6lja")
theme_override_font_sizes/font_size = 50
theme_override_styles/normal = SubResource("StyleBoxEmpty_yqdlw")
text = "Level Select"

[node name="OptionsButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_color = Color(0.658824, 0.894118, 0.988235, 1)
theme_override_colors/font_focus_color = Color(0.411765, 0.411765, 0.411765, 1)
theme_override_fonts/font = ExtResource("4_l6lja")
theme_override_font_sizes/font_size = 50
theme_override_styles/normal = SubResource("StyleBoxEmpty_c0x2h")
text = "Options"

[node name="CreditsButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
focus_neighbor_bottom = NodePath("../StartButton")
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_color = Color(0.658824, 0.894118, 0.988235, 1)
theme_override_colors/font_focus_color = Color(0.411765, 0.411765, 0.411765, 1)
theme_override_fonts/font = ExtResource("4_l6lja")
theme_override_font_sizes/font_size = 50
theme_override_styles/normal = SubResource("StyleBoxEmpty_1erl6")
text = "Credits"

[node name="TitleLabel" type="Label" parent="."]
layout_mode = 0
offset_top = 64.0
offset_right = 744.0
offset_bottom = 130.0
scale = Vector2(1.37664, 1.45385)
text = "Into the Spikescape"
label_settings = SubResource("LabelSettings_bsiki")
horizontal_alignment = 1

[node name="Spike" type="Sprite2D" parent="."]
position = Vector2(655, 421)
texture = ExtResource("5_f3ve2")

[node name="Spike2" type="Sprite2D" parent="."]
position = Vector2(610, 338)
texture = ExtResource("5_f3ve2")

[node name="Spike3" type="Sprite2D" parent="."]
position = Vector2(511, 294)
texture = ExtResource("5_f3ve2")

[node name="Spike4" type="Sprite2D" parent="."]
position = Vector2(416, 335)
texture = ExtResource("5_f3ve2")

[node name="Spike5" type="Sprite2D" parent="."]
position = Vector2(370, 422)
texture = ExtResource("5_f3ve2")

[node name="Player" type="Sprite2D" parent="."]
position = Vector2(512, 400)
texture = ExtResource("6_76h86")
